# wikiapp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.notebook  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
notebooks/: analysis.ipynb  analysis.md
src/wikiapp/: __init__.py  api.py  cli.py  config.py  db.py  etl.py  model.py  pipelines.py  population.py  schemas.py  scraper.py  train.py  transform.py
src/wikiapp/clients/: wikidata.py  wikipedia.py
src/wikiapp/data/: museums_cache.json
src/wikiapp/repositories/: features.py  models.py  museums.py  populations.py
src/wikiapp/services/: etl.py  training.py  transform.py
tests/: conftest.py  test_functional.py  test_pipeline.py
