[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wikiapp"
version = "0.3.0"
description = "Museum visitor vs city population analysis using Wikipedia data"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pandas>=2.1",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "lxml>=5.0",
    "joblib>=1.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
notebook = ["jupyterlab>=4.0", "jupytext>=1.19.1"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
wikiapp = "wikiapp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wikiapp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not functional'"
markers = ["functional: calls real external APIs (deselected by default)"]
